added 2nd banner

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,3 @@
-HOME GOME SOME
-
-
 <img src="/new_logo.jpg" class="home_icon">
 
 
@@ -53,12 +50,37 @@ HOME GOME SOME
 <br>
 <div class="grey banner">
   <h1>Pest Control</h1>
-
-  With over 25 years of experience, Bug Blasters Inc provides quality residential and commercial pest control services to Central New Jersey and surrounding areas! It is our goal to perform each service with the utmost professionalism and to exceed the needs of each customer. Our technicians are highly trained, skilled, insured, and licensed in New Jersey and Pennsylvania.
-  We specialize in pest control and wildlife removal. We carefully eradicate insects, rodents and other pests with specialized techniques that are mindful of humans and pets! Our services include treatment of residential and commercial properties.
-  We offer Realtors and Homeowners timely Wood Destroying Insect Inspections needed at the closing table. Inspections are conducted by Certified Wood Destroying Insect Inspectors. Our treatments include difficult to manage pests such as termites, bed bugs, fleas, ants, mosquitoes, spiders, roaches, stink bugs, boxelder bugs, bagworms, tent worms and more! We provide power washing and gutter cleaning which is often required before removing carpenter bees, at an affordable price.
-  <br>
-  Call Bug Blasters Inc today! 609-298-8778.
+  <div class="p_container">
+    <p>
+      With over 25 years of experience, Bug Blasters Inc provides quality residential and commercial pest control services to Central New Jersey and surrounding areas!
+       It is our goal to perform each service with the utmost professionalism and to exceed the needs of each customer. Our technicians are highly trained, skilled,
+       insured, and licensed in New Jersey and Pennsylvania.<br>
+    </p>
+    <p>
+      We specialize in pest control and wildlife removal. We carefully eradicate insects, rodents and other pests with specialized techniques that are mindful of
+      humans and pets! Our services include treatment of residential and commercial properties.
+      We offer Realtors and Homeowners timely Wood Destroying Insect Inspections needed at the closing table. Inspections are conducted by Certified Wood Destroying
+      Insect Inspectors.
+     </p>
+    </div>
+   <h2>Our treatments include difficult to manage pests such as termites</h2>
+   <ul>
+     <li>termites</li>
+     <li>bed bugs</li>
+     <li>fleas</li>
+     <li>ants</li>
+     <li>mosquitoes</li>
+     <li>spiders</li>
+     <li>roaches</li>
+   </ul>
+   <ul>
+     <li>stink bugs</li>
+     <li>boxelder bugs</li>
+     <li>bagworms</li>
+     <li>tent worms</li>
+     <li> power washing and gutter cleaning (often required before removing carpenter bees)</li>
+     <li>and more!</li>
+   </ul>
 </div>
 
 <h1>GOOGLE MAP STUFF</h1>
