--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -137,6 +137,32 @@ html,body{
   background-color: #232323;
   color: #f5f5f5;
   margin-top: -23px;
+
+  .p_container{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 225px;
+  }
+  p{
+    vertical-align: top;
+     text-indent: 50px;
+    display: inline-block;
+    max-width: 40%;
+    margin-right: 50px;
+    line-height: 1.665em;
+  }
+  ul{
+    display: inline-block;
+    margin-left: 32vw;
+    margin-right: 0;
+  }
+  ul:nth-of-type(2){
+    margin-left: 100px;
+  }
+  h2{
+    text-align: center;
+  }
 }
 
 //**********************************************HOME************************************************//
