added rest of banners to home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,7 +24,7 @@
 
   <div class="home_pics">
     <%= link_to("#") do %>
-      <img src="/wasp.jpg">
+      <img src="/bees.jpeg">
       <span class="text-content"><span>Exterior Pest Control</span></span>
     <% end %>
   </div>
@@ -82,21 +82,78 @@
      <li>and more!</li>
    </ul>
 </div>
+<div class="banner map_banner">
+  <h1>Location</h1>
 
-<h1>GOOGLE MAP STUFF</h1>
+  <iframe
+    src="https://www.google.com/maps/embed/v1/place?q=%20Bordentown%2C%20NJ%2C%20United%20States&key=AIzaSyAP1F7L3kTaS0ry33Vmf7cXO9hWfZADXYU" allowfullscreen>
+  </iframe>
+  <div id="map_info">
+    <h2>Located at</h2>
+    <p>Bordentown, NJ 08505</p>
+    <h2>Phone</h2>
+    <p>(609) 298-8778</p>
+    <h2>Hours</h2>
+    <p>Monday thur Friday 9AM-5PM</p>
+  </div>
+  <div id="map_info">
+    <h2>Providing rodent and pest control in</h2>
+    <p id="locations">
+    Bordentown, NJ<br>
+    Burlington County, NJ<br>
+    Bordentown Township, NJ<br>
+    Fieldsboro, NJ<br>
+    Chesterfield Township, NJ<br>
+    Hamilton Township, NJ<br>
+    Mansfield, NJ<br>
+    Robbinsville, NJ<br>
+    Allentown, NJ<br>
+    Upper Freehold, NJ<br>
+    North Hanover Township, NJ<br>
+    Springfield, NJ<br>
+    Burlington, NJ<br>
+    Burlington Township, NJ<br>
+    </p>
+
+  </div>
+</div>
 <br>
-<div class="banner">
-  Exterminators Bordentown NJ
 
-  It is easy for a small pest infestation to turn into a major problem. Whether you are dealing with seasonal insect populations or environmental pests, insects and rodents can cause major disruptions to your life. Not only are these bugs and critters a nuisance, they also pose health and safety risks to your family and pets. Eliminate the problem before it gets out of hand with Bug Blasters, Inc. For nearly 30 years, we have been providing pest control service in Central New Jersey. Using our safe and effective methods, we can control, eliminate and prevent infestations, leaving you and your family with the peace of mind that comes with knowing your home is secure and free of pests.
-
-  Where other exterminators have failed, we are there to pick up the slack. Our experts specialize in eliminating difficult pests and offering intense treatments to control any type of insect or rodent population, from beg bugs to fleas to mice. If your home is under attack from wood damaging insects like termites or carpenter bees, give us a call, we have Certified Wood Destroying Insect Inspectors on staff. Our technicians are highly trained to handle the robust treatments these pests require.
-
-      We provide outstanding extermination services to eliminate and prevent infestations.
-      We use effective and safe treatment methods.
-      We serve both residential and commercial customers.
-      We are a member of the National Pest Management Association.
-      We offer competitive prices and quick service.
+<div class="white banner">
+  <h1>Exterminators</h1>
+  <div class="p_container">
+    <p>
+It is easy for a small pest infestation to turn into a major problem. Whether you are dealing with seasonal insect populations or environmental pests, insects
+and rodents can cause major disruptions to your life. Not only are these bugs and critters a nuisance, they also pose health and safety risks to your family and
+pets. Eliminate the problem before it gets out of hand with Bug Blasters, Inc. For nearly 30 years, we have been providing pest control service in Central
+New Jersey. Using our safe and effective methods, we can control, eliminate and prevent infestations, leaving you and your family with the peace of mind that
+comes with knowing your home is secure and free of pests.<br>
+    </p>
+    <p>
+      Where other exterminators have failed, we are there to pick up the slack. Our experts specialize in eliminating difficult pests and offering intense
+      treatments to control any type of insect or rodent population, from beg bugs to fleas to mice. If your home is under attack from wood damaging insects
+      like termites or carpenter bees, give us a call, we have Certified Wood Destroying Insect Inspectors on staff. Our technicians are highly trained to
+      handle the robust treatments these pests require.
+     </p>
+    </div>
+    <div id="white_list">
+      We provide outstanding extermination services to eliminate and prevent infestations.<br>
+      We use effective and safe treatment methods.<br>
+      We serve both residential and commercial customers.<br>
+      We are a member of the National Pest Management Association.<br>
+      We offer competitive prices and quick service.<br>
+    </div>
 
 </div>
-<h1>Members of: pics</h1>
+<div class="banner members">
+  <h1>Were members of...<h1>
+  <img src="/member2.jpg" class="member_icon">
+  <img src="/member1.png" class="member_icon">
+  <img src="/member3.png" class="member_icon">
+  <img src="/member4.jpg" class="member_icon">
+</div>
+
+<div id="footer">
+
+
+</div>
