--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -165,4 +165,105 @@ html,body{
   }
 }
 
+.map_banner{
+  color: #f5f5f5;
+  background-image: url('/rat_blur.jpg');
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+#map_info{
+  display: inline-block;
+  margin-left: 2vw;
+  vertical-align: top;
+
+
+  h2{
+    display: inline-block;
+    vertical-align: top;
+    margin-top: 0px;
+    margin-bottom: -5px;
+  }
+}
+#map_info:nth-of-type(1){
+  margin-right: 7vw;
+}
+#locations{
+  line-height: 200%;
+}
+iframe{
+  margin-right: 7vw;
+  height: 500px;
+  width: 500px;
+  border: none;
+  display: inline-block;
+}
+
+
+.white{
+  background-color: #f8f8f8;
+  color: #343434;
+  margin-top: -23px;
+
+  .p_container{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 225px;
+  }
+  p{
+    vertical-align: top;
+     text-indent: 50px;
+    display: inline-block;
+    max-width: 40%;
+    margin-right: 50px;
+    line-height: 1.665em;
+  }
+  ul{
+    display: inline-block;
+    margin-left: 32vw;
+    margin-right: 0;
+  }
+  ul:nth-of-type(2){
+    margin-left: 100px;
+  }
+  h2{
+    text-align: center;
+  }
+  #white_list{
+    margin-top: 13px;
+    font-size: 25px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 1.665em;
+  }
+}
+ .members{
+   font-size: 30px;
+   -webkit-text-stroke-width: .5px;
+   -webkit-text-stroke-color: white;
+   text-align: center;
+   background-image: url('/wall.jpeg');
+   background-attachment: fixed;
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+ }
+.member_icon{
+  margin: 15px;
+  max-width: 20%;
+}
+#footer{
+  height: 450px;
+  width: 100%;
+  background-color: #232323;
+}
 //**********************************************HOME************************************************//
+#map {
+
+ height: 500px;
+ width: 500px;
+ margin-bottom: 20px;
+}
