--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,9 +1,11 @@
-<div id="map"></div>
-
-
-
-
+<div id="contact_wrapper">
+  <h1>Locate and Contact Us!</h1>
+  <div id="map"></div>
 </div>
+
+
+
+
 
 
 
