--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,64 @@ html,body{
   width: 100%;
   margin: 0;
 }
+//**********************************************HEADER************************************************//
+
+#header{
+  width: 100%;
+  height: 110px;
+  background-color: #f8f8f8;
+  img{
+    height: 100px;
+    width: auto;
+  }
+  ul {
+    display: inline-block;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    float: right;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-right: 50px;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-family: 'Ubuntu', sans-serif;
+    -webkit-transition: all .5s ease;
+   -moz-transition: all .5s ease;
+     -o-transition: all .5s ease;
+    -ms-transition: all .5s ease;
+        transition: all .5s ease;
+
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+    color: grey;
+}
+}
+#left_header{
+  display: inline-block;
+  background-color: #e0e0df;
+  border-right: .5px solid #b3b3b3;
+  height: 110px;
+}
+
+
+
+//**********************************************HEADER************************************************//
+
 
 //**********************************************HOME************************************************//
 
@@ -31,7 +89,8 @@ html,body{
 }
 
 .banner{
-  background-color: white;
+  background-color: #f8f8f8;
+  color: #343434;
   max-width: 100%;
   padding: 50px 100px 50px 100px;
   font-family: 'Open Sans', sans-serif;
@@ -70,7 +129,7 @@ html,body{
 .home_pics{
   margin: -3px;
   width: 50vw;
-  height: 35vw;
+  height: 25vw;
   display: inline-block;
 
   img{
@@ -115,7 +174,7 @@ html,body{
     display: table;
     height: 50px;
     margin-left: 20%;
-    margin-top:  -350px;
+    margin-top:  -250px;
     position: absolute;
     width: 150px;
     opacity: 0;
@@ -255,15 +314,103 @@ iframe{
   margin: 15px;
   max-width: 20%;
 }
-#footer{
-  height: 450px;
-  width: 100%;
-  background-color: #232323;
-}
-//**********************************************HOME************************************************//
-#map {
 
+//**********************************************HOME************************************************//
+
+
+
+
+
+
+//**********************************************FOOTER************************************************//
+
+#footer{
+  height: 350px;
+  min-width: 100%;
+  max-width: 100%;
+  background-color: #232323;
+  padding: 250px 50px 00px 50px;
+  position: relative;
+  p{
+    font-size: 15px;
+    color: #767676;
+    vertical-align: top;
+    position: absolute;
+  	bottom: 0px;
+    font-family: 'Open Sans', sans-serif;
+
+  }
+  h1{
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
+    margin-bottom: 25px;
+    color: #767676;
+
+  }
+}
+
+#SM_footer{
+  text-align: center;
+}
+.SM_icon_wrapper{
+  background-color: #767676;
+  display: inline-block;
+  height: 35px;
+  width: 35px;
+  margin-left: 10px;
+}
+.SM_icon{
+  width: 40px;
+  height: 40px;
+}
+.invert{
+  filter: invert(87%);
+}
+
+
+
+hr.style18 {
+  height: 30px;
+  border-style: solid;
+  border-color: #8c8b8b;
+  border-width: 1px 0 0 0;
+  border-radius: 20px;
+  width: 20%;
+  margin-bottom: 25px;
+}
+hr.style18:before {
+  display: block;
+  content: "";
+  height: 30px;
+  margin-top: -31px;
+  border-style: solid;
+  border-color: #8c8b8b;
+  border-width: 0 0 1px 0;
+  border-radius: 20px;
+}
+
+//**********************************************FOOTER************************************************//
+
+
+
+//**********************************************CONTACT PAGE************************************************//
+
+#contact_wrapper{
+
+  h1{
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
+    margin-bottom: 50px;
+  }
+  h2{
+    margin-top: 50px;
+    font-family: 'Ubuntu', sans-serif;
+    text-align: center;
+  }
+}
+#map {
  height: 500px;
  width: 500px;
  margin-bottom: 20px;
 }
+//**********************************************CONTACT PAGE************************************************//
