--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,14 +16,14 @@
 </div>
 <div id="home_pics_container">
   <div class="home_pics">
-    <%= link_to("#") do %>
+    <%= link_to("/pages/interior") do %>
       <img src="/termite.jpg">
       <span class="text-content"><span>Interior Pest Control</span></span>
     <% end %>
   </div>
 
   <div class="home_pics">
-    <%= link_to("#") do %>
+    <%= link_to("/pages/exterior") do %>
       <img src="/bees.jpeg">
       <span class="text-content"><span>Exterior Pest Control</span></span>
     <% end %>
@@ -32,14 +32,14 @@
   <div style='clear:both'></div>
 
   <div class="home_pics">
-    <%= link_to("#") do %>
+    <%= link_to("/pages/commercial") do %>
       <img src="/com.jpg">
       <span class="text-content"><span>Commercial Pest Control</span></span>
     <% end %>
   </div>
 
   <div class="home_pics">
-    <%= link_to("#") do %>
+    <%= link_to("/pages/contact") do %>
       <img src="/map.png">
       <span class="text-content"><span>Locate and Contact Us!</span></span>
     <% end %>
@@ -146,14 +146,36 @@ comes with knowing your home is secure and free of pests.<br>
 
 </div>
 <div class="banner members">
-  <h1>Were members of...<h1>
+  <h1>We're members of...<h1>
   <img src="/member2.jpg" class="member_icon">
   <img src="/member1.png" class="member_icon">
   <img src="/member3.png" class="member_icon">
   <img src="/member4.jpg" class="member_icon">
 </div>
 
-<div id="footer">
 
+<div id="footer">
+  <h1>Find us here!</h1><hr class="style18">
+  <div id="SM_footer">
+    <div class="SM_icon_wrapper">
+       <a href="https://www.facebook.com/pages/Bug-Blasters-Inc/625034294286328?sk=timeline"><img src="/facebook.png" class="SM_icon invert"></a>
+
+    </div>
+    <div class="SM_icon_wrapper">
+       <a href="https://plus.google.com/102481671134854625281/about"><img src="/google-plus.png" class="SM_icon invert"></a>
+    </div>
+    <div class="SM_icon_wrapper">
+        <a href="http://www.bing.com/local/details.aspx?lid=YN587x10139746"><img src="/bing.png" class="SM_icon invert"></a>
+    </div>
+    <div class="SM_icon_wrapper">
+      <a href="https://local.yahoo.com/details;_ylt=AwrSyCSEGO5TV1kADrLumYlQ;_ylu=X3oDMTBtbTlna3Y0BGNvbG8DZ3ExBHZ0aWQDBHQxcG9zAzE-?id=10941549&stx=&csz=Bordentown+NJ"><img src="/yahoo-logo.png" class="SM_icon invert"></a>
+    </div>
+      <a href="http://www.yellowpages.com/bordentown-nj/mip/bug-blasters-inc-1478991"><img src="/yellow.png" class="SM_icon"></a>
+    <div class="SM_icon_wrapper">
+
+      <a href="https://www.yelp.com/biz/bug-blasters-inc-bordentown"><img src="/yelp-logo.png" class="SM_icon invert"></a>
+    </div>
+  </div>
+  <p>Copyright (c) 2017 Bug Blasters, Inc. - Bordentown, NJ 08505 - (609) 298-8778</p>
 
 </div>
