--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,6 +1,18 @@
 <div id="contact_wrapper">
   <h1>Locate and Contact Us!</h1>
   <div id="map"></div>
+  <div id="contact_info">
+    <h2>Business Hours</h2>
+    <p>
+      Monday: 9:00AM - 5:00PM<br>
+      Tuesday: 9:00AM - 5:00PM<br>
+      Wednesday: 9:00AM - 5:00PM<br>
+      Thursday: 9:00AM - 5:00PM<br>
+      Friday: 9:00AM - 5:00PM
+    </p>
+    <h2>Phone</h2>
+    <p>(609) 298-8778</p>
+  </div>
 </div>
 
 
