--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,11 +11,29 @@
  * file per style scope.
  *
  *= require_tree .
+ *= require sweetalert
  *= require_self
  */
 html,body{
   width: 100%;
   margin: 0;
+}
+
+
+#notice{
+  background-color: teal;
+  width: 100%;
+  height: 200px;
+  text-align: center;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 30px;
+  margin: 0;
+  p{
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    margin: 0;
+  }
 }
 //**********************************************HEADER************************************************//
 
@@ -397,6 +415,8 @@ hr.style18:before {
 
 #contact_wrapper{
   padding: 100px;
+  background-color: #f8f8f8;
+  border-top: .5px solid #b3b3b3;
 
   h1{
     text-align: center;
@@ -420,6 +440,40 @@ hr.style18:before {
     line-height: 250%;
   }
 }
+#contact_wrapper_2{
+  padding: 100px;
+  padding-top: 25px;
+  background-image: url('/desk.jpeg');
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  h1{
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
+    margin-bottom: 50px;
+    color: white;
+  }
+  h2{
+    margin-top: 50px;
+    margin-bottom: 5px;
+    font-family: 'Ubuntu', sans-serif;
+    text-align: center;
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 25vw;
+  }
+  p{
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 25vw;
+    font-family: 'Open Sans', sans-serif;
+    line-height: 250%;
+    color: white;
+    font-size: 20px;
+  }
+}
 #contact_info{
 
   display: inline-block;
@@ -433,5 +487,29 @@ hr.style18:before {
  margin-bottom: 20px;
  margin-left: 5vw;
  display: inline-block;
+}
+
+form{
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  input{
+    width: 500px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  textarea{
+    width: 500px;
+    height: 305px;
+  }
+  p{
+    margin: 5px !important;
+  }
+  .form-error{
+    color: #ffccd5 !important;
+  }
 }
 //**********************************************CONTACT PAGE************************************************//
