--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
+  <link href="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/theme-default.min.css"
+    rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div id="header">
@@ -25,6 +27,30 @@
   </ul>
 </div>
 <%= yield %>
+<div id="footer">
+  <h1>Find us here!</h1><hr class="style18">
+  <div id="SM_footer">
+    <div class="SM_icon_wrapper">
+       <a href="https://www.facebook.com/pages/Bug-Blasters-Inc/625034294286328?sk=timeline"><img src="/facebook.png" class="SM_icon invert"></a>
 
+    </div>
+    <div class="SM_icon_wrapper">
+       <a href="https://plus.google.com/102481671134854625281/about"><img src="/google-plus.png" class="SM_icon invert"></a>
+    </div>
+    <div class="SM_icon_wrapper">
+        <a href="http://www.bing.com/local/details.aspx?lid=YN587x10139746"><img src="/bing.png" class="SM_icon invert"></a>
+    </div>
+    <div class="SM_icon_wrapper">
+      <a href="https://local.yahoo.com/details;_ylt=AwrSyCSEGO5TV1kADrLumYlQ;_ylu=X3oDMTBtbTlna3Y0BGNvbG8DZ3ExBHZ0aWQDBHQxcG9zAzE-?id=10941549&stx=&csz=Bordentown+NJ"><img src="/yahoo-logo.png" class="SM_icon invert"></a>
+    </div>
+      <a href="http://www.yellowpages.com/bordentown-nj/mip/bug-blasters-inc-1478991"><img src="/yellow.png" class="SM_icon"></a>
+    <div class="SM_icon_wrapper">
+
+      <a href="https://www.yelp.com/biz/bug-blasters-inc-bordentown"><img src="/yelp-logo.png" class="SM_icon invert"></a>
+    </div>
+  </div>
+  <p>Copyright (c) 2017 Bug Blasters, Inc. - Bordentown, NJ 08505 - (609) 298-8778</p>
+
+</div>
 </body>
 </html>
