added commercial page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,10 @@
 <% if flash[:notice]%>
   <div id="notice"><p><%= flash[:notice] %></p></div>
 <%end%>
-<img src="/new_logo.jpg" class="home_icon">
-
+<% if false%>
+  <img src="/new_logo.jpg" class="home_icon">
+<%end%>
+<div class="home_icon"></div>
 
 <div class="banner">
   <h1>Protecting health and home since 1985 with personalized pest control</h1>
