--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
  */
 html,body{
   width: 100%;
+  height:100%;
   margin: 0;
 }
 
@@ -99,6 +100,12 @@ li a:hover {
 .home_icon{
   width: 100%;
   height: 1000px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url('/new_logo.jpg');
+
 }
 .bug_icon{
   display: inline-block;
@@ -513,3 +520,223 @@ form{
   }
 }
 //**********************************************CONTACT PAGE************************************************//
+
+
+
+//**********************************************INTERIOR PAGE************************************************//
+
+
+.interior_banner{
+  width: 100%;
+  height: 500px;
+  background-image: url('/interior_no_text.jpg');
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 85px;
+  line-height: 150%;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.int_box{
+  width: 50vw;
+  height: 25vw;
+  display: inline-block;
+  background-color: #F8F8F8;
+  margin: 0;
+}
+
+.int_text{
+  vertical-align: top;
+  white-space: normal;
+  h2{
+    display: block;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 35px;
+    text-align: center;
+  }
+  p{
+    font-family: 'Open Sans', sans-serif;
+    line-height: 175%;
+    padding: 0 70px 0 70px;
+    font-size: 20px;
+    color: #767676;
+  }
+}
+  .int_pic_1{
+    background-image: url('/grasshopper.jpeg');
+    background-size: cover;
+  }
+  .int_pic_2{
+    background-image: url('/ants.jpg');
+    background-size: cover;
+  }
+  .int_pic_3{
+    background-image: url('/real_estate.jpeg');
+    background-size: cover;
+  }
+  .int_pic_4{
+    background-image: url('/damage.jpg');
+    background-size: cover;
+  }
+  .int_pic_5{
+    background-image: url('/bed.jpg');
+    background-size: cover;
+  }
+
+
+  #int_foot{
+    max-width: 100%;
+    height: 350px;
+    margin-top: -4px;
+    background-image: url('/car.jpeg');
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 20px;
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 40px;
+    line-height: 160%;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+//**********************************************INTERIOR PAGE************************************************//
+
+
+//**********************************************COMMERCIAL PAGE************************************************//
+
+
+#com_wrapper{
+  width: 100%;
+  text-align: center;
+  height: 100%;
+  background-color: #232323;
+  p{
+    position: relative;
+    top: 50px;
+    display: inline-block;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 16px;
+    color: white;
+  }
+  p:nth-of-type(1){
+    left: -16%;
+  }
+  p:nth-of-type(2){
+    left: -5%;
+    top: 100px;
+  }
+  p:nth-of-type(3){
+    left: 5%;
+  }
+  p:nth-of-type(4){
+    left: 16%;
+    top: 100px;
+  }
+}
+
+.com_pic{
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
+  -moz-filter: grayscale(100%);
+  filter: grayscale(100%);
+  filter: gray;
+  -webkit-filter: grayscale(1);
+}
+.com_pic_odd{
+  background-color: red;
+  width: 17%;
+  height: 73%;
+  display: inline-block;
+  margin: 0;
+  margin-right: 15px;
+  top: 50px;
+  position: relative;
+}
+
+.com_pic_even{
+  background-color: blue;
+  width: 17%;
+  height: 73%;
+  display: inline-block;
+  margin: 0;
+  margin-right: 15px;
+  top: 100px;
+  position: relative;
+}
+.com1{
+  background-image: url('/kitchen.jpg');
+   background-position: 3% 50%;
+}
+.com2{
+  background-image: url('/spider.jpeg') !important;
+  background-position: center;
+   background-size: 225%;
+}
+.com3{
+  background-image: url('/squirell.jpeg') !important;
+  background-size: 255%;
+  background-position: 25% 10%;
+}
+.com4{
+  background-image: url('/pest.jpeg') !important;
+  background-size: 500%;
+  background-position: 30% 10%;
+}
+
+.com_pic_grey{
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
+  -moz-filter: grayscale(100%);
+  filter: grayscale(100%);
+  filter: gray;
+  -webkit-filter: grayscale(1);
+  -webkit-transition: all 1s ease;
+ -moz-transition: all 1s ease;
+   -o-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+      transition: all 1s ease;
+}
+
+.com_pic_color{
+  filter: grayscale(0%);
+  -webkit-filter: grayscale(0%);
+  -moz-filter: grayscale(0%);
+  filter: grayscale(0%);
+  -webkit-filter: grayscale(0);
+  -webkit-transition: all 1s ease;
+ -moz-transition: all 1s ease;
+   -o-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+      transition: all 1s ease;
+}
+
+#com_text{
+  background-color: #F8F8F8;
+  div{
+    padding: 10px 100px 10px 100px;
+    border-bottom: 1px solid  #767676;;
+    margin-bottom: 50px;
+  }
+  h1{
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
+    margin-bottom: 50px;
+  }
+  p{
+    font-size: 18px;
+    font-family: 'Open Sans', sans-serif;
+    line-height: 200%;
+  }
+}
+//**********************************************COMMERCIAL PAGE************************************************//
