--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bugblasterinc</title>
+  <title>Bug Blaster inc</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Ubuntu:medium" rel="stylesheet">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -11,6 +11,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
   <link href="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/theme-default.min.css"
     rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="header_logo.ico" />
 </head>
 <body>
 <div id="header">
@@ -20,10 +21,10 @@
     <% end %>
   </div>
   <ul>
-    <li><a href="/pages/interior">Interior Pest Control</a></li>
-    <li><a href="/pages/exterior">Exterior Pest Control</a></li>
-    <li><a href="/pages/commercial">Commercial Pest Control</a></li>
-    <li><a href="/pages/contact">Contact Us</a></li>
+    <li><a href="/interior">Interior Pest Control</a></li>
+    <li><a href="/exterior">Exterior Pest Control</a></li>
+    <li><a href="/commercial">Commercial Pest Control</a></li>
+    <li><a href="/contact">Contact Us</a></li>
   </ul>
 </div>
 <%= yield %>
