--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,14 +21,14 @@
 </div>
 <div id="home_pics_container">
   <div class="home_pics">
-    <%= link_to("/pages/interior") do %>
+    <%= link_to("/interior") do %>
       <img src="/termite.jpg">
       <span class="text-content"><span>Interior Pest Control</span></span>
     <% end %>
   </div>
 
   <div class="home_pics">
-    <%= link_to("/pages/exterior") do %>
+    <%= link_to("/exterior") do %>
       <img src="/bees.jpeg">
       <span class="text-content"><span>Exterior Pest Control</span></span>
     <% end %>
@@ -37,14 +37,14 @@
   <div style='clear:both'></div>
 
   <div class="home_pics">
-    <%= link_to("/pages/commercial") do %>
+    <%= link_to("/commercial") do %>
       <img src="/com.jpg">
       <span class="text-content"><span>Commercial Pest Control</span></span>
     <% end %>
   </div>
 
   <div class="home_pics">
-    <%= link_to("/pages/contact") do %>
+    <%= link_to("/contact") do %>
       <img src="/map.png">
       <span class="text-content"><span>Locate and Contact Us!</span></span>
     <% end %>
