fixed int and ext page images

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -743,7 +743,7 @@ form{
 
 
 
-//**********************************************INTERIOR PAGE************************************************//
+//**********************************************EXTERIOR PAGE************************************************//
 
 
 .exterior_banner{
@@ -770,19 +770,19 @@ form{
   background-image: url('/web.jpeg');
   background-size: cover;
 }
-.int_pic_2{
+.ext_pic_2{
   background-image: url('/raccoon.jpeg');
   background-size: cover;
 }
-.int_pic_3{
+.ext_pic_3{
   background-image: url('/1bee.jpg');
   background-size: cover;
 }
-.int_pic_4{
+.ext_pic_4{
   background-image: url('/nest.jpeg');
   background-size: cover;
 }
-.int_pic_5{
+.ext_pic_5{
   background-image: url('/gutter.jpg');
   background-size: cover;
 }
@@ -806,3 +806,4 @@ form{
   justify-content: center;
   align-items: center;
 }
+//**********************************************EXTERIOR PAGE************************************************//
