fixed uppercase file name

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -684,7 +684,7 @@ form{
    background-size: 225%;
 }
 .com3{
-  background-image: url('/squirell.jpeg') !important;
+  background-image: url('/Squirell.jpeg') !important;
   background-size: 255%;
   background-position: 25% 10%;
 }
