--- a/app/views/contact/contact.test.erb
+++ b/app/views/contact/contact.test.erb
@@ -1,5 +1,11 @@
-Test Email !!!, From <%= @email %>
+
+
+
+
+Email recived from Bug-Blasters-Inc Site!
 ===============================================
 
+The Email Left from the user was <%=@email%>. Below is their message.
+===============================================
 
-Thanks for joining and have a great day!
+<%=@message%>
