--- a/app/views/contact/contact_email.html.erb
+++ b/app/views/contact/contact_email.html.erb
@@ -3,8 +3,13 @@
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
+
+
   <body>
-    <h1>Test Email!!!! from <%=@email%> </h1>
+    <h1>Email recived from Bug-Blasters-Inc Site! </h1>
+    <h2>The Email Left from the user was <%=@email%>. Below is their message. </h2>
     <p><%=@message%></p>
   </body>
+
+
 </html>
