fixed mailer layout 2

--- a/app/views/pages/exterior.html.erb
+++ b/app/views/pages/exterior.html.erb
@@ -11,7 +11,7 @@
 </div>
 
 <div style="width:100%;overflow: hidden;white-space: nowrap;  vertical-align: top;">
-  <div class="int_box int_pic_2"></div>
+  <div class="int_box ext_pic_2"></div>
   <div class="int_box int_text">
     <h2>Pest Management</h2>
     <p>The outdoors pose a unique problem for those hoping to live pest-free. Because of breeding patterns and open access, it can be difficult to permanently
@@ -26,11 +26,11 @@
     <p> If you have a bee or wasp problem, don’t try to deal with it yourself. These pests are difficult to manage and extremely dangerous. Our experts can
         handle the problem, eliminating the pests at their source and preventing future problems.</p>
   </div>
-  <div class="int_box int_pic_3"></div>
+  <div class="int_box ext_pic_3"></div>
 </div>
 
 <div style="width:100%;overflow: hidden;white-space: nowrap;  vertical-align: top;">
-    <div class="int_box int_pic_4"></div>
+    <div class="int_box ext_pic_4"></div>
     <div class="int_box int_text">
     <h2>Power Washing</h2>
     <p> Some insects can build their homes along surfaces, making it difficult to fully eliminate the problem. Let us come in and power wash these surfaces.
@@ -45,7 +45,7 @@
       difficulty of reaching and cleaning out these items, their populations can grow out of control. Let us do the dirty work of cleaning out your gutters
       and eliminating these pest populations.</p>
   </div>
-  <div class="int_box int_pic_5"></div>
+  <div class="int_box ext_pic_5"></div>
 </div>
 
 <div id="ext_foot">
