--- a/app/views/contact/contact_email.html.erb
+++ b/app/views/contact/contact_email.html.erb
@@ -7,7 +7,7 @@
 
   <body>
     <h1>Email recived from Bug-Blasters-Inc Site! </h1>
-    <h4>The Email Left from the user was <%=@email%>. Below is their message. </h4>
+    <h4>The email left from the user was <%=@email%>. Below is their message. </h4>
     <p><%=@message%></p>
   </body>
 
