--- a/app/views/pages/commercial.html.erb
+++ b/app/views/pages/commercial.html.erb
@@ -9,6 +9,7 @@
 <p>Rodent Control</p>
 <p>Pest Management</p>
 </div>
+<div id="temp_com_banner">Commercial Pest<br> Control</div></div>
 <div id="com_text">
   <div class="text1">
     <h1>Inspections</h1>
