added indvidual title and meta descriptons as well as img alt text

--- a/app/views/pages/commercial.html.erb
+++ b/app/views/pages/commercial.html.erb
@@ -1,3 +1,7 @@
+<head>
+  <meta name="description" content="Bug Blasters Inc offers services for commercial bussiness around New Jersey such as inspections, rodent and pest control and more.">
+</head>
+<% @title = "Commercial Pest Control For New Jersey Bug Blasters Inc" %>
 <div id="com_wrapper">
 <div class="com_pic_odd com1 com_pic com_pic_color"></div>
 <div class="com_pic_even com2 com_pic com_pic_color"></div>
