--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,3 +1,7 @@
+<head>
+  <meta name="description" content="Find and Locate Bug Blasters Inc in New Jersey and contact us through phone or email!">
+</head>
+<% @title = "Locate and Contact Bug Blasters Inc New Jersey" %>
 <div id="contact_wrapper">
   <h1>Locate and Contact Us!</h1>
   <div id="map"></div>
