--- a/app/views/pages/exterior.html.erb
+++ b/app/views/pages/exterior.html.erb
@@ -1,4 +1,7 @@
-
+<head>
+  <meta name="description" content="Bug Blasters Inc offers services to deal with mutiple pest outside your structures such as raccoons, bees, wasps and more">
+</head>
+<% @title = "Exterior Pest Control For New Jersey Bug Blasters Inc" %>
 <div class="exterior_banner">Pest and Bug <br> Control</div>
 <div style="width:100%;overflow: hidden;white-space: nowrap;  vertical-align: top;">
   <div class="int_box int_text">
