--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bug Blaster inc</title>
+  <title><%= @title||= "Bug Blasters Inc Pest Control and Extermination for New Jersey" %></title>
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Ubuntu:medium" rel="stylesheet">
@@ -19,7 +19,7 @@
 <div id="header">
   <div id="left_header">
     <%= link_to("/") do %>
-      <img src="/header_logo.png" class="header_logo">
+      <img src="/header_logo.png" class="header_logo" alt="Bug Blasters Inc New Jersey logo">
     <% end %>
   </div>
   <ul>
@@ -34,22 +34,22 @@
   <h1>Find us here!</h1><hr class="style18">
   <div id="SM_footer">
     <div class="SM_icon_wrapper">
-       <a href="https://www.facebook.com/pages/Bug-Blasters-Inc/625034294286328?sk=timeline"><img src="/facebook.png" class="SM_icon invert"></a>
+       <a href="https://www.facebook.com/pages/Bug-Blasters-Inc/625034294286328?sk=timeline"><img src="/facebook.png" class="SM_icon invert" alt="Facebook icon"></a>
 
     </div>
     <div class="SM_icon_wrapper">
-       <a href="https://plus.google.com/102481671134854625281/about"><img src="/google-plus.png" class="SM_icon invert"></a>
+       <a href="https://plus.google.com/102481671134854625281/about"><img src="/google-plus.png" class="SM_icon invert" alt="Google Plus icon"></a>
     </div>
     <div class="SM_icon_wrapper">
-        <a href="http://www.bing.com/local/details.aspx?lid=YN587x10139746"><img src="/bing.png" class="SM_icon invert"></a>
+        <a href="http://www.bing.com/local/details.aspx?lid=YN587x10139746"><img src="/bing.png" class="SM_icon invert" alt="Bing icon"></a>
     </div>
     <div class="SM_icon_wrapper">
-      <a href="https://local.yahoo.com/details;_ylt=AwrSyCSEGO5TV1kADrLumYlQ;_ylu=X3oDMTBtbTlna3Y0BGNvbG8DZ3ExBHZ0aWQDBHQxcG9zAzE-?id=10941549&stx=&csz=Bordentown+NJ"><img src="/yahoo-logo.png" class="SM_icon invert"></a>
+      <a href="https://local.yahoo.com/details;_ylt=AwrSyCSEGO5TV1kADrLumYlQ;_ylu=X3oDMTBtbTlna3Y0BGNvbG8DZ3ExBHZ0aWQDBHQxcG9zAzE-?id=10941549&stx=&csz=Bordentown+NJ"><img src="/yahoo-logo.png" class="SM_icon invert" alt="Yahoo icon"></a>
     </div>
-      <a href="http://www.yellowpages.com/bordentown-nj/mip/bug-blasters-inc-1478991"><img src="/yellow.png" class="SM_icon"></a>
+      <a href="http://www.yellowpages.com/bordentown-nj/mip/bug-blasters-inc-1478991"><img src="/yellow.png" class="SM_icon" alt="Yellow Pages icon"></a>
     <div class="SM_icon_wrapper">
 
-      <a href="https://www.yelp.com/biz/bug-blasters-inc-bordentown"><img src="/yelp-logo.png" class="SM_icon invert"></a>
+      <a href="https://www.yelp.com/biz/bug-blasters-inc-bordentown"><img src="/yelp-logo.png" class="SM_icon invert" alt="Yelp icon"></a>
     </div>
   </div>
   <p>Copyright (c) 2017 Bug Blasters, Inc. - Bordentown, NJ 08505 - (609) 298-8778</p>
