--- a/app/views/pages/interior.html.erb
+++ b/app/views/pages/interior.html.erb
@@ -1,4 +1,7 @@
-
+<head>
+  <meta name="description" content="Bug Blasters Inc offers services to deal with mutiple pest inside your structures such as ants, spiders, termites, bedbugs and more">
+</head>
+<% @title = "Interior Pest Control For New Jersey Bug Blasters Inc" %>
 <div class="interior_banner">Full Service <br> Extermination</div>
 <div style="width:100%;overflow: hidden;white-space: nowrap;  vertical-align: top;">
   <div class="int_box int_text">
@@ -7,11 +10,11 @@
       problem, but are unable to stem what is causing the pest issue. With our superior interior pest control in Central New Jersey, we will identify the source
       and determine the extent of the problem.</p>
   </div>
-  <div class="int_box int_pic_1"></div>
+  <div class="int_box int_pic_1"title="Grasshopper"></div>
 </div>
 
 <div style="width:100%;overflow: hidden;white-space: nowrap;  vertical-align: top;">
-  <div class="int_box int_pic_2"></div>
+  <div class="int_box int_pic_2"  title="Ants"></div>
   <div class="int_box int_text">
     <h2>Extermination</h2>
     <p>When you have a pest control problem, it can be frustrating trying to eliminate and prevent infestations. Our exterminators are trained in using the
@@ -26,11 +29,11 @@
     <p>There are a great deal of things to consider when buying or selling a home and pest inspections are just one of them. Rely on our inspectors who will
       give you a timely, thorough and cost effective solution to your real estate inspection needs.</p>
   </div>
-  <div class="int_box int_pic_3"></div>
+  <div class="int_box int_pic_3"title="Real Estate Prices"></div>
 </div>
 
 <div style="width:100%;overflow: hidden;white-space: nowrap;  vertical-align: top;">
-    <div class="int_box int_pic_4"></div>
+    <div class="int_box int_pic_4"title="Termite Damage"></div>
     <div class="int_box int_text">
     <h2>Termite control</h2>
     <p>Termite infestations are notoriously difficult to control and when left unattended, these pests can wreak havoc on your home. Bug Blasters, Inc.
@@ -47,7 +50,7 @@
        is not a solution and can make the problem more difficult to eliminate. DIY treatments almost always make a pest problem arose and more expensive in
        the long run. We will do it right the first time. Don’t lose another night of sleep, call us!</p>
   </div>
-  <div class="int_box int_pic_5"></div>
+  <div class="int_box int_pic_5"title="Bed Bug"></div>
 </div>
 
 <div id="int_foot">
