compressed main header images

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -542,7 +542,7 @@ form{
 .interior_banner{
   width: 100%;
   height: 500px;
-  background-image: url('/interior_no_text.jpg');
+  background-image: url('/interior_no_text3.jpg');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -780,7 +780,7 @@ form{
 .exterior_banner{
   width: 100%;
   height: 500px;
-  background-image: url('/skunk.jpg');
+  background-image: url('/skunk3.jpg');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
