--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -108,12 +108,12 @@ li a:hover {
 
 .home_icon{
   width: 100%;
-  height: 1000px;
+  height: 75%;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url('/new_logo.jpg');
+  background-image: url('/new_tan_logo.jpg');
 
 }
 .bug_icon{
