--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,14 @@
     <li><a href="/interior">Interior Pest Control</a></li>
     <li><a href="/exterior">Exterior Pest Control</a></li>
     <li><a href="/commercial">Commercial Pest Control</a></li>
+    <div class="dropdown_div">
+      <li class='dropdown_link'><a href="#" onclick="return false;">Prep Sheets</a></li>
+      <div class="dropdown_content">
+        <li><a href="#">Bedbug</a></li>
+        <li><a href="#">Bedbug (español)</a></li>
+        <li><a href="#">Roach</a></li>
+      </div>
+    </div>
     <li><a href="/contact">Contact Us</a></li>
   </ul>
 </div>
@@ -60,3 +68,31 @@
 
 </body>
 </html>
+<script type="text/javascript">
+
+$('.dropdown_div').on('mouseleave', function () {
+    if ($(window).width() < 1110) {
+      if ($('#header').height() === 421) {
+        $("#header").css('min-height', 421, 'important');
+        $("#header").css('max-height', 421, 'important');
+        console.log('mobile');
+      } else {
+        $("#header").css('min-height', 310);
+        $("#header").css('max-height', 310);
+      }
+    }
+}).on('mouseenter', function () {
+    if ($(window).width() < 1110) {
+        $("#header").css('min-height', 420);
+        $("#header").css('max-height', 420);
+    }
+});
+
+$('.dropdown_div').on({ 'touchstart' : function(){
+  $("#header").css('min-height', 421, 'important');
+  $("#header").css('max-height', 421, 'important');
+  $(".dropdown_content").css('display', 'block', 'important');
+}
+});
+
+</script>
