--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,9 @@
  *= require font-awesome
  *= require_self
  */
+
+
+
 html,body{
   width: 100%;
   height:100%;
@@ -61,7 +64,7 @@ body{
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow: visible;
     float: right;
     position: relative;
     top: 50%;
@@ -100,7 +103,46 @@ li a:hover {
   height: 110px;
 }
 
+.dropdown_div{
+  display: inline-block;
+  float: left;
+}
+ .dropdown_content {
+    display: none;
+    position: absolute;
+    top: 50px;
+    clear: both;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    li{
+      float: none !important;
+    }
+    li a {
+      float: none;
+        display: block;
+        color: black;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-family: 'Ubuntu', sans-serif;
+        -webkit-transition: all .5s ease;
+       -moz-transition: all .5s ease;
+         -o-transition: all .5s ease;
+        -ms-transition: all .5s ease;
+            transition: all .5s ease;
 
+    }
+
+    /* Change the link color to #111 (black) on hover */
+    li a:hover {
+        color: grey;
+    }
+}
+.dropdown_div:hover .dropdown_content {
+    display: block;
+}
 
 //**********************************************HEADER************************************************//
 
@@ -846,14 +888,25 @@ form{
 
 //**********************************************HEADER ************************************************//
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1110px) {
     #header {
       text-align: center;
-      max-height: 290px;
-      min-height: 290px;
+      height: 310px;
+      min-height: 310px;
       vertical-align: top;
+      overflow: hidden;
       #left_header{
         display: block;
+      }
+      .dropdown_div{
+        width: 100%;
+        display: block;
+        float: none;
+      }
+      .dropdown_content{
+        position:  relative;
+        top: 0;
+        background-color: #e0e0df;
       }
       ul{
         width: 100%;
@@ -866,6 +919,9 @@ form{
         li{
           float: none;
           display: block;
+          a{
+            padding: 10px 16px;
+          }
         }
     }
 }
